--- a/plot_world_map.ipynb
+++ b/plot_world_map.ipynb
@@ -147,11 +147,12 @@
    "metadata": {},
    "source": [
     "## 读取世界地图数据\n",
-    "这里，使用geopandas读取中科院全球国家行政边界数据, <br>\n",
-    "地图数据下载网址：https://www.resdc.cn/Default.aspx，<br>\n",
-    "选择【全球100万基础地理数据】分类下面的【全球国家行政边界数据】下载解压。<br>\n",
-    "<br>\n",
-    "需要注意的是，从其它地方下载的世界地图（大多来自西方国家），西藏的边界线是有问题的，跟国家官方给的边界线不一致，如果用那些数据来画图，审核肯定无法通过。还有台湾、钓鱼岛和南海诸岛。所以，我们最后使用的是中科院提供的世界地图数据来画图。"
+    "这里，使用geopandas读取中科院全球国家行政边界数据,<br>\n",
+    "地图数据下载网址：中国科学院地理科学与资源研究所，<br>\n",
+    "链接https://www.resdc.cn/Default.aspx，选择【全球100万基础地理数据】分类下面的【全球国家行政边界数据】下载解压，也可以直接从前面分享的github链接获取地图数据。\n",
+    "<br><br>\n",
+    "需要注意的是，从其它地方下载的世界地图（大多来自西方国家），西藏的边界线是有问题的，跟国家官方给的边界线不一致，如果用那些数据来画图，审核肯定无法通过。还有台湾、钓鱼岛和南海诸岛，也存在问题。所以，我们最后使用的是中科院提供的世界地图数据来画图。<br><br>\n",
+    "如果需要画中国地图，比如不同省、市的分布，可以将这里的世界地图数据替换为中国地图即可（一般是geojson格式的地图数据，也可以在上面中科院官网下载中国地图数据）。"
    ]
   },
   {
